--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-package-l",
+  "name": "my-package-ldeath",
   "main": "./lib/my-package",
   "version": "0.1.0",
   "description": "A short description of your package",
